# rust-graphql-with-dataloader

./: Dockerfile  README.md  docker-compose.yml  env
app/: .env  Cargo.toml
app/migrations/2019-10-24-185424_initial/: up.sql
app/migrations/2020-01-31-193001_galaxy_movies/: down.sql  up.sql
app/nodejs/: .env  README.md  jest.config.js  package-lock.json  package.json
app/nodejs/knex/: client.js  config.js
app/nodejs/src/: data.js  graphql-schema.js  loaders.js  server.js
app/src/: main.rs  schema.rs
app/src/db/: mod.rs
app/src/errors/: mod.rs
app/src/graphql/: mod.rs  utils.rs
app/src/graphql/data_loader/: character.rs  mod.rs  movie.rs  movie_character.rs  user.rs
app/src/graphql/dataloader_batchers/: character.rs  mod.rs  movie.rs  movie_character.rs  user.rs
app/src/graphql/input/: mod.rs  movie.rs  user.rs
app/src/graphql/models/: character.rs  movie.rs  user.rs
app/src/graphql/mutation/: user.rs
app/src/graphql/query/: character.rs  mod.rs  movie.rs  user.rs
app/src/handlers/: mod.rs
app/src/models/: character.rs  mod.rs  movie.rs  movie_character.rs  user.rs
app/src/utils/: env.rs  identity.rs  jwt.rs  mod.rs
docker/: env.tmpl  start.sh
