[package]
name = "rust_graphq_with_dataloader"
version = "0.1.0"
authors = ["engylemure <jordao.rosario01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = { version = "2.0.0", features = ["rustls"] }
actix-cors = "0.2.0"
actix-identity = "0.2.0"
env_logger = "0.7.1"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
diesel = { version = "1.4.3", features = ["mysql", "r2d2", "chrono", "uuidv07",]}
diesel-derive-enum = { version = "0.4", features = ["mysql"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
jsonwebtoken = "7.0.1"
chrono = { version = "0.4.9", features = ["serde"] }
rand = "0.7.2"
actix-web-httpauth = "0.3.2"
argon2rs = "0.2.5"
derive_more = "0.15.0"
listenfd = "0.3"
validator = "0.10"
validator_derive = "0.10"
# The Future is NOW!!!!!
dataloader = "0.6.0"
futures = "0.3"
juniper_codegen = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["async"] }
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["async"] }
graphql_depth_limit = "0.1.1"
